@@ -6,6 +6,7 @@ Version 1.3
   - Extend App icons zoom sizes up to 512px [BUG-21];
   - Allow to choose *.svg and *.svgz images for icons [BUG-21];
   - Add an app option to switch default/ambiance-light/ambiance-dark icon [BUG-21];
+  - Use ISO country codes for translation files (required for: pootle, gentoo ebuild);
 
 Version 1.2-r2
  Added:
